Test/Prop/Comm.expected
goal: f p q = f q p

query:
(declare-fun f (Bool Bool) Bool)
(declare-const p Bool)
(declare-const q Bool)
(assert (not (= (f p q) (f q p))))
(check-sat)

result: sat
Test/Prop/Comm.lean:4:2: error: unable to prove goal, it is false
